--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-29 21:17-0600\n"
+"PO-Revision-Date: 2021-02-16 17:13-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3755,6 +3755,36 @@ msgid ""
 "`__iter__` should iterate through the object's keys; for sequences, it "
 "should iterate through the values."
 msgstr ""
+"Los siguientes métodos pueden ser definidos para implementar objetos "
+"contenedores. Los contenedores son generalmente secuencias (como listas o "
+"tuplas) o mapeos (como diccionarios), pero también pueden representar otros "
+"contenedores. La primera colección de métodos es utilizada ya sea para "
+"emular una secuencia o para emular un mapeo; la diferencia es que para una "
+"secuencia, las llaves permitidas deben ser los enteros *k* por lo que ``0 <= "
+"k < N`` donde *N* es la longitud de la secuencia, o secciones de objetos, "
+"los cuales definen un rango de elementos. También es recomendado que los "
+"mapeos proporcionen los métodos :meth:`keys`, :meth:`values`, :meth:"
+"`items`, :meth:`get`, :meth:`clear`, :meth:`setdefault`, :meth:`pop`, :meth:"
+"`popitem`, :meth:`!copy`, y :meth:`update` comportándose de manera similar a "
+"aquellos para los objetos de diccionario estándar de Python. El módulo :mod:"
+"`collections.abc` proporciona una clase base abstracta :class:`~collections."
+"abc.MutableMapping` que ayuda a crear aquellos métodos desde un conjunto "
+"base de :meth:`__getitem__`, :meth:`__setitem__`, :meth:`__delitem__`, y :"
+"meth:`keys`. Secuencias mutables deben proporcionar métodos :meth:`append`, :"
+"meth:`count`, :meth:`index`, :meth:`extend`, :meth:`insert`, :meth:`pop`, :"
+"meth:`remove`, :meth:`reverse` y :meth:`sort`, como objetos de lista "
+"estándar de Python. Por último, tipos de secuencia deben implementar adición "
+"(concatenación) y multiplicación (repetición) al definir los métodos :meth:"
+"`__add__`, :meth:`__radd__`, :meth:`__iadd__`, :meth:`__mul__`, :meth:"
+"`__rmul__` y :meth:`__imul__` descritos a continuación; no deben definir "
+"otros operadores numéricos. Es recomendado que ambos mapeos y secuencias "
+"implementen el método :meth:`__contains__` para permitir el uso eficiente "
+"del operador ``in``; para mapeos, ``in`` debe buscar las llaves de los "
+"mapeos; para secuencias, debe buscar a través de los valores. Además es "
+"recomendado que tanto mapeos como secuencias implementen el método :meth:"
+"`__iter__` para permitir una iteración eficiente por el contenedor; para "
+"mapeos, :meth:`__iter__` debe iterar a través de las llaves del objeto; para "
+"secuencias, debe iterar a través de los valores."
 
 #: ../Doc/reference/datamodel.rst:2171
 msgid ""
@@ -3763,6 +3793,10 @@ msgid ""
 "define a :meth:`__bool__` method and whose :meth:`__len__` method returns "
 "zero is considered to be false in a Boolean context."
 msgstr ""
+"Es llamado para implementar la función incorporada :func:`len`. Debe "
+"retornar la longitud del objeto, un entero ``>=`` 0. También, un objeto que "
+"no define un método :meth:`__bool__` y cuyo método :meth:`__len__` retorna "
+"cero, es considerado como falso en un contexto booleano."
 
 #: ../Doc/reference/datamodel.rst:2178
 msgid ""
@@ -3772,6 +3806,12 @@ msgid ""
 "OverflowError` by truth value testing, an object must define a :meth:"
 "`__bool__` method."
 msgstr ""
+"En CPython, se requiere que la longitud sea como mucho :attr:`sys.maxsize`. "
+"Si la longitud es más grande que :attr:`!sys.maxsize` algunas "
+"características (como :func:`len`) pueden lanzar una excepción :exc:"
+"`OverflowError`. Para prevenir lanzar una excepción :exc:`!OverflowError` al "
+"validar la verdad de un valor, un objeto debe definir un método :meth:"
+"`__bool__`."
 
 #: ../Doc/reference/datamodel.rst:2187
 msgid ""
@@ -3782,6 +3822,12 @@ msgid ""
 "method didn't exist at all. This method is purely an optimization and is "
 "never required for correctness."
 msgstr ""
+"Es llamado para implementar :func:`operator.length_hint`. Debe retornar una "
+"longitud estimada para el objeto (que puede ser mayor o menor que la "
+"longitud actual). La longitud debe ser un entero ``>=`` 0. El valor de "
+"retorno también debe ser :const:`NotImplemented` el cual es tratado de igual "
+"forma a que si el método ``__length_hint__`` no existiera en absoluto. Este "
+"método es puramente una optimización y nunca es requerido para precisión."
 
 #: ../Doc/reference/datamodel.rst:2201
 msgid ""
@@ -3797,6 +3843,7 @@ msgstr "es traducido a ::"
 #: ../Doc/reference/datamodel.rst:2209
 msgid "and so forth.  Missing slice items are always filled in with ``None``."
 msgstr ""
+"etcétera. Elementos faltantes de segmentos siempre son llenados con ``None``."
 
 #: ../Doc/reference/datamodel.rst:2214
 msgid ""
@@ -3809,12 +3856,25 @@ msgid ""
 "negative values), :exc:`IndexError` should be raised. For mapping types, if "
 "*key* is missing (not in the container), :exc:`KeyError` should be raised."
 msgstr ""
+"Es llamado para implementar la evaluación de ``self[key]``. Para tipos de "
+"secuencia, las llaves aceptadas deben ser enteros y objetos de segmento. Se "
+"debe tomar en cuenta que la interpretación especial de índices negativos (si "
+"la clase desea emular un tipo de secuencia) depende del método :meth:"
+"`__getitem__`. Si *key* es de un tipo apropiado, se puede lanzar una "
+"excepción :exc:`TypeError`; si es de un valor afuera de la colección de "
+"índices para la secuencia (después de alguna interpretación especial de "
+"valores negativos), se debe lanzar una excepción :exc:`IndexError`. Para "
+"tipos de mapeos, si falta *key* (no en el contenedor), la excepción :exc:"
+"`KeyError` debe ser lanzada."
 
 #: ../Doc/reference/datamodel.rst:2225
 msgid ""
 ":keyword:`for` loops expect that an :exc:`IndexError` will be raised for "
 "illegal indexes to allow proper detection of the end of the sequence."
 msgstr ""
+"ciclos :keyword:`for` esperan que una excepción :exc:`IndexError` sea "
+"lanzada para que índices ilegales permitan la detección adecuada del fin de "
+"una secuencia."
 
 #: ../Doc/reference/datamodel.rst:2231
 msgid ""
@@ -3824,6 +3884,12 @@ msgid ""
 "sequences if elements can be replaced.  The same exceptions should be raised "
 "for improper *key* values as for the :meth:`__getitem__` method."
 msgstr ""
+"Es llamado para implementar la asignación a ``self[key]``. Lo mismo con "
+"respecto a :meth:`__getitem__`. Esto solo debe ser implementado para mapeos "
+"si los objetos permiten cambios a los valores de las llaves, o si nuevas "
+"llaves pueden ser añadidas, o para secuencias si los elementos pueden ser "
+"reemplazados. Las mismas excepciones deben ser lanzadas para valores de "
+"*key* inadecuados con respecto al método :meth:`__getitem__`."
 
 #: ../Doc/reference/datamodel.rst:2240
 msgid ""
@@ -3833,12 +3899,21 @@ msgid ""
 "the sequence.  The same exceptions should be raised for improper *key* "
 "values as for the :meth:`__getitem__` method."
 msgstr ""
+"Es llamado para implementar el borrado de ``self[key]``. Lo mismo con "
+"respecto a :meth:`__getitem__`. Esto solo debe ser implementado para mapeos "
+"si los objetos permiten el borrado de llaves, o para secuencias si los "
+"elementos pueden ser eliminados de la secuencia. Las mismas excepciones "
+"deben ser lanzadas por valores de *key* inapropiados con respecto al método :"
+"meth:`__getitem__`."
 
 #: ../Doc/reference/datamodel.rst:2249
 msgid ""
 "Called by :class:`dict`\\ .\\ :meth:`__getitem__` to implement ``self[key]`` "
 "for dict subclasses when key is not in the dictionary."
 msgstr ""
+"Es llamado por :class:`dict`\\ .\\ :meth:`__getitem__` para implementar "
+"``self[key]`` para subclases de diccionarios cuando la llave no se encuentra "
+"en el diccionario."
 
 #: ../Doc/reference/datamodel.rst:2255
 msgid ""
@@ -3847,6 +3922,10 @@ msgid ""
 "objects in the container.  For mappings, it should iterate over the keys of "
 "the container."
 msgstr ""
+"Este método es llamado cuando se requiere un iterador para un contenedor. "
+"Este método debe retornar un nuevo objeto iterador que pueda iterar todos "
+"los objetos del contenedor. Para mapeos, debe iterar sobre las llaves del "
+"contenedor."
 
 #: ../Doc/reference/datamodel.rst:2259
 msgid ""
@@ -3854,6 +3933,9 @@ msgid ""
 "return themselves.  For more information on iterator objects, see :ref:"
 "`typeiter`."
 msgstr ""
+"Objetos iteradores también necesitan implementar este método; son requeridos "
+"para retornarse a sí mismos. Para mayor información sobre objetos "
+"iteradores, ver :ref:`typeiter`."
 
 #: ../Doc/reference/datamodel.rst:2265
 msgid ""
@@ -3861,6 +3943,9 @@ msgid ""
 "iteration.  It should return a new iterator object that iterates over all "
 "the objects in the container in reverse order."
 msgstr ""
+"Es llamado (si existe) por la función incorporada :func:`reversed` para "
+"implementar una interacción invertida. Debe retornar un nuevo objeto "
+"iterador que itere sobre todos los objetos en el contenedor en orden inverso."
 
 #: ../Doc/reference/datamodel.rst:2269
 msgid ""
@@ -3870,6 +3955,12 @@ msgid ""
 "provide :meth:`__reversed__` if they can provide an implementation that is "
 "more efficient than the one provided by :func:`reversed`."
 msgstr ""
+"Si el método :meth:`__reversed__` no es proporcionado, la función "
+"incorporada :func:`reversed` recurrirá a utilizar el protocolo de secuencia "
+"(:meth:`__len__` y :meth:`__getitem__`). Objetos que permiten el protocolo "
+"de secuencia deben únicamente proporcionar :meth:`__reversed__` si no pueden "
+"proporcionar una implementación que sea más eficiente que la proporcionada "
+"por :func:`reversed`."
 
 #: ../Doc/reference/datamodel.rst:2276
 msgid ""
@@ -3878,6 +3969,11 @@ msgid ""
 "objects can supply the following special method with a more efficient "
 "implementation, which also does not require the object be iterable."
 msgstr ""
+"Los operadores de prueba de pertenencia (:keyword:`in` and :keyword:`not "
+"in`) son normalmente implementados como una iteración sobre un contenedor. "
+"Sin embargo, los objetos de contenedor pueden proveer el siguiente método "
+"especial con una implementación más eficiente, que tampoco requiere que el "
+"objeto sea iterable."
 
 #: ../Doc/reference/datamodel.rst:2283
 msgid ""
@@ -3885,6 +3981,10 @@ msgid ""
 "is in *self*, false otherwise.  For mapping objects, this should consider "
 "the keys of the mapping rather than the values or the key-item pairs."
 msgstr ""
+"Es llamado para implementar operadores de prueba de pertenencia. Deben "
+"retornar *true* si *item* se encuentra en *self*, de lo contrario *false*. "
+"Para objetos de mapeo, estos debe considerar las llaves del mapeo en lugar "
+"de los valores o los pares de llave-valor."
 
 #: ../Doc/reference/datamodel.rst:2287
 msgid ""
@@ -3893,10 +3993,15 @@ msgid ""
 "protocol via :meth:`__getitem__`, see :ref:`this section in the language "
 "reference <membership-test-details>`."
 msgstr ""
+"Para objetos que no definen :meth:`__contains__`, la prueba de pertenencia "
+"primero intenta la iteración a través de :meth:`__iter__`, y luego el "
+"antiguo protocolo de iteración de secuencia a través de :meth:`__getitem__`, "
+"ver :ref:`esta sección en la referencia del lenguaje <membership-test-"
+"details>`."
 
 #: ../Doc/reference/datamodel.rst:2296
 msgid "Emulating numeric types"
-msgstr ""
+msgstr "Emulando tipos numéricos"
 
 #: ../Doc/reference/datamodel.rst:2298
 msgid ""
@@ -3905,6 +4010,10 @@ msgid ""
 "number implemented (e.g., bitwise operations for non-integral numbers) "
 "should be left undefined."
 msgstr ""
+"Los siguientes métodos pueden ser definidos para emular objetos numéricos. "
+"Métodos que corresponden a operaciones que no son permitidas por el número "
+"particular implementado (por ejemplo, operaciones bit a bit para números no "
+"enteros) se deben dejar sin definir."
 
 #: ../Doc/reference/datamodel.rst:2324
 msgid ""
@@ -3924,6 +4033,8 @@ msgid ""
 "If one of those methods does not support the operation with the supplied "
 "arguments, it should return ``NotImplemented``."
 msgstr ""
+"Si alguno de esos métodos no permiten la operación con los argumentos "
+"suministrados, debe retornar ``NotImplemented``."
 
 #: ../Doc/reference/datamodel.rst:2358
 msgid ""
@@ -3942,6 +4053,8 @@ msgid ""
 "Note that ternary :func:`pow` will not try calling :meth:`__rpow__` (the "
 "coercion rules would become too complicated)."
 msgstr ""
+"Tomar en cuenta que la función ternaria :func:`pow` no intentará llamar a :"
+"meth:`__rpow__` (las reglas de coerción se volverían demasiado complicadas)."
 
 #: ../Doc/reference/datamodel.rst:2374
 msgid ""
