Translate using/windows.po (#302) Apply suggestions

--- a/using/windows.po
+++ b/using/windows.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-02 16:24-0300\n"
+"PO-Revision-Date: 2021-02-27 13:30-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +54,7 @@ msgstr ""
 "intérprete principal y la biblioteca para ser usados por un solo usuario. El "
 "instalador también es capaz de hacer la instalación para todos los usuarios "
 "de una única máquina, y un archivo ZIP separado está disponible para "
-"distribuciones locales junto a aplicaciones."
+"distribuciones locales (específicas) para cada aplicación."
 
 #: ../Doc/using/windows.rst:24
 msgid ""
@@ -93,7 +93,7 @@ msgid ""
 "corrupting other programs. It also provides many convenient commands for "
 "launching Python and its tools."
 msgstr ""
-":ref:`windows-store` es una instalación de Python simple que es adecuada "
+":ref:`windows-store` es una instalación simple de Python que es adecuada "
 "para ejecutar scripts y paquetes, y para usar IDLE u otros entornos de "
 "desarrollo. Requiere Windows 10, pero la instalación puede hacerse de forma "
 "segura sin corromper otros programas. También proporciona muchos comandos "
@@ -148,7 +148,8 @@ msgstr ""
 #: ../Doc/using/windows.rst:65
 msgid "After starting the installer, one of two options may be selected:"
 msgstr ""
-"Luego de iniciar el instalador, una o dos opciones pueden ser seleccionadas:"
+"Luego de iniciar el instalador, se puede seleccionar una de estas dos "
+"opciones:"
 
 #: ../Doc/using/windows.rst:69
 msgid "If you select \"Install Now\":"
@@ -172,13 +173,13 @@ msgid ""
 "The :ref:`launcher` will be installed according to the option at the bottom "
 "of the first page"
 msgstr ""
-"El :ref:`launcher` será instalado de acuerdo con las opciones en la parte "
+"El :ref:`launcher` será instalado de acuerdo con la opción en la parte "
 "inferior de la primera página"
 
 #: ../Doc/using/windows.rst:77
 msgid "The standard library, test suite, launcher and pip will be installed"
 msgstr ""
-"La librería estándar, conjunto de pruebas, lanzador y pip serán instalados"
+"La biblioteca estándar, conjunto de pruebas, lanzador y pip serán instalados"
 
 #: ../Doc/using/windows.rst:78
 msgid "If selected, the install directory will be added to your :envvar:`PATH`"
@@ -230,7 +231,7 @@ msgstr ""
 
 #: ../Doc/using/windows.rst:92
 msgid "The standard library can be pre-compiled to bytecode"
-msgstr "La librería estándar puede ser precompilada a bytecode"
+msgstr "La biblioteca estándar puede ser precompilada a bytecode"
 
 #: ../Doc/using/windows.rst:93
 msgid ""
@@ -382,7 +383,7 @@ msgstr "DefaultAllUsersTargetDir"
 #: ../Doc/using/windows.rst:149
 msgid "The default installation directory for all-user installs"
 msgstr ""
-"El directorio predeterminado de instalación para instalaciones de todos los "
+"El directorio predeterminado de instalación cuando se instala para todos los "
 "usuarios"
 
 #: ../Doc/using/windows.rst:149
@@ -498,7 +499,7 @@ msgstr "Include_dev"
 
 #: ../Doc/using/windows.rst:181
 msgid "Install developer headers and libraries"
-msgstr "Instalar encabezados y librerías de desarrollo"
+msgstr "Instalar encabezados y bibliotecas de desarrollo"
 
 #: ../Doc/using/windows.rst:184
 msgid "Include_exe"
@@ -530,7 +531,7 @@ msgstr "Include_lib"
 
 #: ../Doc/using/windows.rst:192
 msgid "Install standard library and extension modules"
-msgstr "Instalar la librería estándar y los módulos de extensión"
+msgstr "Instalar la biblioteca estándar y los módulos de extensión"
 
 #: ../Doc/using/windows.rst:195
 msgid "Include_pip"
@@ -562,7 +563,7 @@ msgstr "Include_test"
 
 #: ../Doc/using/windows.rst:201
 msgid "Install standard library test suite"
-msgstr "Instalar el conjunto de pruebas de la librería estándar"
+msgstr "Instalar el conjunto de pruebas de la biblioteca estándar"
 
 #: ../Doc/using/windows.rst:203
 msgid "Include_tools"
@@ -721,7 +722,7 @@ msgid ""
 "\"Repair\" will verify all the files that should be installed using the "
 "current settings and replace any that have been removed or modified."
 msgstr ""
-"\"Reparar\" verificará todos los archivos que deben instalarse con "
+"\"Reparar\" verificará todos los archivos que deben instalarse con la "
 "configuración actual y reemplazará los que se hayan eliminado o modificado."
 
 #: ../Doc/using/windows.rst:285
@@ -934,7 +935,7 @@ msgstr ""
 "contiene un archivo de propiedades MSBuild ``Python.props`` que puede ser "
 "usado en un proyecto C++ para referenciar la instalación de Python. Al "
 "incluir las configuraciones, automáticamente se usarán los encabezados y se "
-"importarán las librerías en la compilación."
+"importarán las bibliotecas en la compilación."
 
 #: ../Doc/using/windows.rst:394
 msgid ""
@@ -974,10 +975,10 @@ msgid ""
 msgstr ""
 "Al ser extraída, la distribución incrustable está (casi) completamente "
 "aislada del sistema del usuario, incluyendo variables de entorno, "
-"configuraciones del registro del sistema y paquetes instalados. La librería "
-"estándar se incluye como archivos ``.pyc`` precompilados y optimizados "
-"dentro de un ZIP, y ``python3.dll``, ``python37.dll``, ``python.exe`` y "
-"``pythonw.exe`` están todos proporcionados. Tcl/tk (incluidos sus "
+"configuraciones del registro del sistema y paquetes instalados. La "
+"biblioteca estándar se incluye como archivos ``.pyc`` precompilados y "
+"optimizados dentro de un ZIP, y ``python3.dll``, ``python37.dll``, ``python."
+"exe`` y ``pythonw.exe`` están todos proporcionados. Tcl/tk (incluidos sus "
 "dependientes, como Idle), pip y la documentación de Python no están "
 "incluidos."
 
@@ -1387,7 +1388,7 @@ msgstr ""
 "instrucciones en :ref:`setting-envvars`. Se necesita configurar la variable "
 "de entorno :envvar:`PATH` para que incluya el directorio de instalación de "
 "Python, separándolo con punto y coma (;) de las otras entradas. Una variable "
-"de ejemplo pude verse así (asumiendo que las dos primeras entradas ya "
+"de ejemplo pude verse así (suponiendo que las dos primeras entradas ya "
 "existían)::"
 
 #: ../Doc/using/windows.rst:608
@@ -1483,7 +1484,7 @@ msgstr ""
 #: ../Doc/using/windows.rst:645
 msgid "Console I/O including standard I/O (see :pep:`528` for details)."
 msgstr ""
-"E/S de consola, incluía la E/S estándar (consultar :pep:`528` para más "
+"E/S de consola, incluída la E/S estándar (consultar :pep:`528` para más "
 "detalles)."
 
 #: ../Doc/using/windows.rst:646
@@ -1516,8 +1517,8 @@ msgid ""
 msgstr ""
 "A diferencia de la variable :envvar:`PATH`, el lanzador seleccionará "
 "correctamente la versión más apropiada de Python. Priorizará instalaciones "
-"del usuario por sobre instalaciones de todo el sistema, y ordena las "
-"versiones por idioma en lugar de utilizar la más recientemente instalada."
+"del usuario por sobre instalaciones de todo el sistema, y ordenará por "
+"versión del lenguaje en lugar de utilizar la más recientemente instalada."
 
 #: ../Doc/using/windows.rst:666
 msgid "The launcher was originally specified in :pep:`397`."
@@ -1603,10 +1604,10 @@ msgid ""
 msgstr ""
 "Si el lanzador es ejecutado sin explícita especificación de la versión de "
 "Python, y un entorno virtual se encuentra activo (creado con el módulo :mod:"
-"`venv` de la librería estándar o con la herramienta externa ``virtualenv``), "
-"el lanzador ejecutará el intérprete del entorno virtual en lugar del global. "
-"Para ejecutar el intérprete global, desactive el entorno virtual o "
-"especifique explícitamente la versión global de Python."
+"`venv` de la biblioteca estándar o con la herramienta externa "
+"``virtualenv``), el lanzador ejecutará el intérprete del entorno virtual en "
+"lugar del global. Para ejecutar el intérprete global, desactive el entorno "
+"virtual o especifique explícitamente la versión global de Python."
 
 #: ../Doc/using/windows.rst:729
 msgid "From a script"
@@ -1644,7 +1645,7 @@ msgstr ""
 "Al ejecutar nuevamente el comando se debería imprimir la información del "
 "último Python 3.x. Al igual que en los ejemplos de línea de comandos "
 "anteriores, se puede especificar un calificador de versión más explícito. "
-"Asumiendo que tiene instalado Python 2.6, pruebe cambiar la primera línea a "
+"Suponiendo que tiene instalado Python 2.6, pruebe cambiar la primera línea a "
 "``#! python2.6`` y debería ver que se imprime la información de la versión "
 "2.6."
 
@@ -1827,10 +1828,10 @@ msgid ""
 msgstr ""
 "El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de "
 "\"datos de aplicación\" del usuario actual (esto es el directorio retornado "
-"por el llamado a la función ``SHGetFolderPath`` con ``CSIDL_LOCAL_APPDATA``) "
-"y ``py.ini`` en el directorio del lanzador. Los mismos archivos .ini son "
-"usados por la versión 'consola' del lanzador (py.exe) y por la versión "
-"'ventana' (pyw.exe)."
+"por el llamado a la función de Windows ``SHGetFolderPath`` con "
+"``CSIDL_LOCAL_APPDATA``) y ``py.ini`` en el directorio del lanzador. Los "
+"mismos archivos .ini son usados por la versión 'consola' del lanzador (py."
+"exe) y por la versión 'ventana' (pyw.exe)."
 
 #: ../Doc/using/windows.rst:849
 msgid ""
@@ -2299,7 +2300,7 @@ msgid ""
 "packages."
 msgstr ""
 "Esto asegura que los archivos de una instalación del sistema no tendrán "
-"precedencia por sobre la copia de la librería estándar incluida en su "
+"precedencia por sobre la copia de la biblioteca estándar incluida en su "
 "aplicación. De otra manera, los usuarios podrían experimentar problemas al "
 "utilizar su aplicación. Tenga en cuenta que la primera sugerencia es la "
 "mejor, ya que las otras aún pueden ser afectadas por rutas no estándar en el "
@@ -2456,8 +2457,8 @@ msgid ""
 "well: Windows Console I/O for Python."
 msgstr ""
 "Dado que la capa de manejo avanzado de terminales de Python, :mod:`curses`, "
-"se encuentra restringida a sistemas tipo Unix, también hay una librería "
-"exclusiva para Windows: Windows Console I/O para Python"
+"se encuentra restringida a sistemas tipo Unix, también hay una biblioteca "
+"exclusiva para Windows: Windows Console I/O para Python."
 
 #: ../Doc/using/windows.rst:1126
 msgid ""
@@ -2523,8 +2524,8 @@ msgid ""
 "and without Microsoft Visual C++\" by Sébastien Sauvage, 2003"
 msgstr ""
 "o \"Creating Python extensions in C/C++ with SWIG and compiling them with "
-"MinGW gcc under Windows\" or \"Installing Python extension with distutils "
-"and without Microsoft Visual C++\" por Sébastien Sauvage, 2003"
+"MinGW gcc under Windows\" o \"Installing Python extension with distutils and "
+"without Microsoft Visual C++\" por Sébastien Sauvage, 2003"
 
 #: ../Doc/using/windows.rst:1155
 msgid "`MingW -- Python extensions <http://www.mingw.org/wiki/FAQ#toc14>`_"
