--- a/using/windows.po
+++ b/using/windows.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-27 13:30-0300\n"
+"PO-Revision-Date: 2021-02-27 13:43-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1484,7 +1484,7 @@ msgstr ""
 #: ../Doc/using/windows.rst:645
 msgid "Console I/O including standard I/O (see :pep:`528` for details)."
 msgstr ""
-"E/S de consola, incluída la E/S estándar (consultar :pep:`528` para más "
+"E/S de consola, incluida la E/S estándar (consultar :pep:`528` para más "
 "detalles)."
 
 #: ../Doc/using/windows.rst:646
