--- a/using/windows.po
+++ b/using/windows.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-27 13:43-0300\n"
+"PO-Revision-Date: 2021-02-27 14:06-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -474,7 +474,7 @@ msgstr "Shortcuts"
 msgid ""
 "Create shortcuts for the interpreter, documentation and IDLE if installed."
 msgstr ""
-"Crear accesos director para el intérprete, documentación e IDLE si está "
+"Crear accesos directos para el intérprete, documentación e IDLE si está "
 "instalado."
 
 #: ../Doc/using/windows.rst:177
@@ -1656,10 +1656,10 @@ msgid ""
 "compatibility and for compatibility with Unix, where the command ``python`` "
 "typically refers to Python 2."
 msgstr ""
-"Tenga en cuenta que a diferencia del uso interactivo, un despojado \"python"
-"\" utilizará la última versión de Python 2.x que esté instalada. Esto es así "
-"por compatibilidad con versiones anteriores y por compatibilidad con Unix, "
-"donde el comando ``python`` usualmente refiere a Python 2."
+"Tenga en cuenta que a diferencia del uso interactivo, el comando \"python"
+"\" (a secas) utilizará la última versión de Python 2.x que esté instalada. "
+"Esto es así por compatibilidad con versiones anteriores y por compatibilidad "
+"con Unix, donde el comando ``python`` usualmente refiere a Python 2."
 
 #: ../Doc/using/windows.rst:765
 msgid "From file associations"
